<resources>
    <string name="app_name">LatihanViewGroup</string>

    <string name="tteokbokki">FUTSAL</string>
    <string name="content_text"></string>
    <string name="content_merek">Pameokja</string>
    <string name="content_masa">1 Bulan</string>
    <string name="content_negara">Indonesia</string>
    <string name="content_kadaluarsa">26–12-2021</string>
    <string name="content_berat">300 gr</string>
    <string name="content_jumlah">1</string>
    <string name="content_ukuran">20 cm</string>
    <string name="stock">Stock : 113</string>
    <string name="specification">Spesifikasi Produk</string>
    <string name="merek">Merek</string>
    <string name="masa">Masa Penyimpanan</string>
    <string name="negara">Negara Asal</string>
    <string name="kadaluarsa">Tanggal Kadaluarsa</string>
    <string name="berat">Berat Produk</string>
    <string name="jumlah">Jumlah Produk Dalam Kemasan</string>
    <string name="ukuran">Ukuran Per Produk</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">pameokja</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">Rp. 24.750</string>
    <string name="dummy_photos">8 photos</string>

    <string name="samyang">Snicer</string>
    <string name="content_text2"> </string>
    <string name="content_merek2">Samyang Green</string>
    <string name="content_masa2">6 Bulan</string>
    <string name="content_negara2">Korea</string>
    <string name="content_kadaluarsa2">17-08-2022</string>
    <string name="content_berat2">1 kg</string>
    <string name="content_rasa">2x Spicy</string>
    <string name="content_jenis">Goreng</string>
    <string name="stock2">Stock : 673</string>
    <string name="specification2">Spesifikasi Produk</string>
    <string name="merek2">Merek</string>
    <string name="masa2">Masa Penyimpanan</string>
    <string name="negara2">Negara Asal</string>
    <string name="kadaluarsa2">Tanggal Kadaluarsa</string>
    <string name="berat2">Berat Produk</string>
    <string name="rasa">Rasa</string>
    <string name="jenis">Jenis Mie Instan</string>
    <string name="seller2">Dijual oleh</string>
    <string name="my_name2">samyangofficialshop</string>
    <string name="buy2">Beli</string>
    <string name="dummy_value2">Rp. 84.000</string>
    <string name="dummy_photos2">4 photos</string>

    <string name="jjajangmyeon">Bolakaki</string>
    <string name="content_text3"> </string>
    <string name="content_merek3">Mujigae</string>
    <string name="content_masa3">6 Bulan</string>
    <string name="content_negara3">Indonesia</string>
    <string name="content_kadaluarsa3">08-08-2022</string>
    <string name="content_berat3">330 gr</string>
    <string name="content_rasa2">Jjajangmyeon</string>
    <string name="stock3">Stock : 3</string>
    <string name="specification3">Spesifikasi Produk</string>
    <string name="merek3">Merek</string>
    <string name="masa3">Masa Penyimpanan</string>
    <string name="negara3">Negara Asal</string>
    <string name="kadaluarsa3">Tanggal Kadaluarsa</string>
    <string name="berat3">Berat Produk</string>
    <string name="rasa2">Rasa</string>
    <string name="seller3">Dijual oleh</string>
    <string name="my_name3">cameralmond</string>
    <string name="buy3">Beli</string>
    <string name="dummy_value3">Rp. 23.900</string>
    <string name="dummy_photos3">9 photos</string>
</resources>